file transmission with content length now works perfect. responses w/o content-length contains a few random characters that shouldn't be there...